# python-wise-utils

./: .gitignore  pyproject.toml  setup.py  tags
python_wise_utils/: __init__.py
wise_utils/: persistent_dict.py
