[tool.poetry]
name = "python_wise_utils"
version = "0.1.3"
description = "Python interpreter convenience utilities"
authors = ["Wisdom Wolf <wisdomwolf@gmail.com>"]
packages = [
    { include = "wise_utils" },
]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
