[tool.poetry]
name = "python_wise_utils"
version = "0.2.0"
description = "Python interpreter convenience utilities"
authors = ["Wisdom Wolf <wisdomwolf@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.*,>=3.6.0"
pyyaml = "^5.3.1"


[tool.dephell.main]
# read from poetry format
from = {format = "poetry", path = "pyproject.toml"}
versioning = "zerover"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
